5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1756_762.log
== TEST (2019-05-23 20:28:03) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(int(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro']))
n=array(eval(input("data:")))
d=n[:1]
m=n[2:4]
a=n[4:8]
print(l[m])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:29:12) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(int['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=array(eval(input("data:")))
d=n[:1]
m=n[2:4]
a=n[4:8]
print(l[m])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:29:59) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=array(eval(input("data:")))
d=n[:1]
m=n[2:4]
a=n[4:8]
print(l[m])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:30:37) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=array(eval(input("data:")))
d=n[0:2]
m=n[2:4]
a=n[4:8]
print(l[m])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:32:10) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array([int('janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro')])
n=array(eval(input("data:")))
d=n[0:2]
m=n[2:4]
a=n[4:8]


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:43:24) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=array(eval(input("data:")))

x=n[0:2]
y=n[2:4]
w=n[4:8]

j= x " de " y " de " w

print(j)
-- ERROR:
File "XXXX", line 10
    j= x " de " y " de " w
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:43:46) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=array(eval(input("data:")))

x=n[0:2]
y=n[2:4]
w=n[4:8]

j= x+ " de " +y +" de "+ w

print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:44:26) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=array(eval(input("data:")))

x=array(n[0:2])
y=array(n[2:4])
w=array(n[4:8])

j= x+ " de " +y +" de "+ w

print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:06:01) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=input("data:")
#Vetor contendo os dias do ano
x=(n[0:2])
#vetor contendo os meses do ano
m=(n[2:4])
#vetor contendo o ano
w=(n[4:])
#vetor contendo os meses
int(s[2:4])

y=vet_mes[int(s[2:4])-1]

j= x+ "de " +y +" de "+ w

print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:06:31) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=input("data:")
#Vetor contendo os dias do ano
x=(n[0:2])
#vetor contendo os meses do ano
m=(n[2:4])
#vetor contendo o ano
w=(n[4:])
#vetor contendo os meses
int(n[2:4])

y=vet_mes[int(s[2:4])-1]

j= x+ "de " +y +" de "+ w

print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:06:43) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=input("data:")
#Vetor contendo os dias do ano
x=(n[0:2])
#vetor contendo os meses do ano
m=(n[2:4])
#vetor contendo o ano
w=(n[4:])
#vetor contendo os meses
int(n[2:4])

y=vet_mes[int(s[2:4])-1]

j= x+ "de " +y +" de "+ w

print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:06:49) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=input("data:")
#Vetor contendo os dias do ano
x=(n[0:2])
#vetor contendo os meses do ano
m=(n[2:4])
#vetor contendo o ano
w=(n[4:])
#vetor contendo os meses
int(n[2:4])

y=vet_mes[int(n[2:4])-1]

j= x+ "de " +y +" de "+ w

print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:07:04) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=input("data:")
#Vetor contendo os dias do ano
x=(n[0:2])
#vetor contendo os meses do ano
m=(n[2:4])
#vetor contendo o ano
w=(n[4:])
#vetor contendo os meses
int(n[2:4])

y=vet_mes[int(n[2:4])-1]

j= x+ " de " +y +" de "+ w

print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 21:07:14) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=input("data:")
#Vetor contendo os dias do ano
x=(n[0:2])
#vetor contendo os meses do ano
m=(n[2:4])
#vetor contendo o ano
w=(n[4:])
#vetor contendo os meses
int(n[2:4])

y=vet_mes[int(n[2:4])-1]

j= x+ " de " +y +" de "+ w

print(j)
-- EXECUTION TIME:
0.509054
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:18:54) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=input("data:")
#Vetor contendo os dias do ano
x=(n[0:2])
#vetor contendo os meses do ano
m=(n[2:4])
#vetor contendo o ano
w=(n[4:])
#vetor contendo os meses
int(n[2:4])

y=vet_mes[int(n[2:4])-1]

j= x+ " de " +y +" de "+ w

print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:00:37) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=input("data:")
#Vetor contendo os dias do ano
x=(n[:2])
#vetor contendo os meses do ano
m=(n[2:4])
#vetor contendo o ano
w=(n[4:])
#vetor contendo os meses
int(n[2:4])

y=vet_mes[int(n[2:4])-1]

j= x+ " de " +y +" de "+ w

print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:00:40) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=input("data:")
#Vetor contendo os dias do ano
x=(n[:2])
#vetor contendo os meses do ano
m=(n[2:4])
#vetor contendo o ano
w=(n[4:])
#vetor contendo os meses
int(n[2:4])

y=vet_mes[int(n[2:4])-1]

j= x+ " de " +y +" de "+ w

print(j)
-- EXECUTION TIME:
0.358612
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:08:13) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=input("data:")
#Vetor contendo os dias do ano
x=(n[:2])
#vetor contendo os meses do ano
m=(n[2:4])
#vetor contendo o ano
w=(n[4:])
#vetor contendo os meses


y=vet_mes[int(n[2:4])-1]

j= x+ " de " +y +" de "+ w

print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:08:16) 
-- CODE:
from numpy import*
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n=input("data:")
#Vetor contendo os dias do ano
x=(n[:2])
#vetor contendo os meses do ano
m=(n[2:4])
#vetor contendo o ano
w=(n[4:])
#vetor contendo os meses


y=vet_mes[int(n[2:4])-1]

j= x+ " de " +y +" de "+ w

print(j)
-- EXECUTION TIME:
0.482203
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
